Fixed display on small screen

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -39,9 +39,9 @@ a:focus {
 	background: none;
 	color: black;
 	font-size: 4rem;
-	margin-right: 15px;
-	width: 80px; /* Adjust as needed */
-	height: 80px; /* Adjust as needed */
+	margin-right: 10px;
+	width: 70px; /* Adjust as needed */
+	height: 70px; /* Adjust as needed */
 	filter: invert(100%);
 }
 
@@ -386,7 +386,7 @@ border-top-color: #f9c922; /* Chrome, Opera 15+, Safari 5+ */ animation: spin 1.
 /* Gallery */
 .grid-item {
 	display: inline-block;
-	margin: 20px 10px 0px 0px;
+	margin: 20px;
 	background-color: #fff8f0;
 	border-radius: 3px;
 	border: #0a3d57 solid 3px;
